--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -6,26 +6,21 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
 <?import java.net.URL?>
-
-<BorderPane fx:controller="com.comp2042.GuiController"
-            xmlns:fx="http://javafx.com/fxml">
-    styleClass="gameBoard"
-    fx:id="gameBoard">
+<Pane fx:controller="com.comp2042.GuiController"
+      xmlns:fx="http://javafx.com/fxml">
+    <GridPane fx:id="brickPanel" vgap="1" hgap="1"/>
+    <BorderPane styleClass="gameBoard" fx:id="gameBoard">
         <center>
-            <StackPane>
-                <GridPane fx:id="gamePanel" hgap="1" vgap="1" alignment="CENTER"/>
-            </StackPane>
+            <GridPane fx:id="gamePanel" hgap="1" vgap="1" layoutY="30" layoutX="40"/>
         </center>
-
-        <GridPane fx:id="brickPanel" hgap="1" vgap="1" StackPane.alignment="CENTER"/>
+    </BorderPane>
 
     <Group fx:id="groupNotification" layoutX="14" layoutY="203">
         <VBox alignment="CENTER">
             <GameOverPanel fx:id="gameOverPanel"/>
         </VBox>
     </Group>
-
     <stylesheets>
         <URL value="@window_style.css"/>
     </stylesheets>
-</BorderPane>
+</Pane>
