--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -23,4 +23,5 @@
     <stylesheets>
         <URL value="@window_style.css"/>
     </stylesheets>
+    <Label fx:id="scoreLabel" text="0" styleClass="scoreClass" layoutX="250" layoutY="10"/>
 </Pane>
